Commit a saco. Hasta aqui funciona lo basico.
* Login de usuario y operador
* Intercambio de mensajes entre unos y otros
* actualización de la lista de conversaciones
  - Conversación actual en negrita
  - Conversación con algo pendiente subrayada
* Actualización del chat de operador según sea la conversación que se esté
 leyendo

FALTA:
* Cerrar conversaciones del lado del usuario
* Cerrar conversaciones del lado del operador
* Cerrar sesión del lado del operador

... y no sé si hay algo más

--- a/WebContent/resources/css/styles.css
+++ b/WebContent/resources/css/styles.css
@@ -19,6 +19,20 @@ form#conversationsList a{
 	display: block;
 }
 
+
+form#conversationsList .selected{
+	font-weight: bold;
+}
+
+
+form#conversationsList .not-selected{
+	font-weight: normal;
+}
+
+form#conversationsList .not-selected.pending{
+	text-decoration: underline;
+}
+
 form .error{
 	display: block;
 	color:red;
@@ -31,7 +45,7 @@ form .error{
 }
 
 #avatar {
-    width: 90%px;
+    width: 90%;
     background: #eee;
     border-radius: 50%;
 }
