--- a/WebContent/resources/css/styles.css
+++ b/WebContent/resources/css/styles.css
@@ -11,17 +11,32 @@ form {
 	background-color: #eee;
 }
 
+
 form#conversationsList {
 	background-color: transparent;
+	margin-top:0;
+	padding:0;
 }
 
 form#conversationsList a{
 	display: block;
+	padding: 5px 10px;
+	margin-top: 3px;
 }
 
+form#conversationsList a.close-chat{
+	display: inline-block;
+    float: left;
+    top: 3px;
+    margin: 5px 0;
+    font-weight: normal;
+    padding: 0px 5px 0px 10px;
+}
 
 form#conversationsList .selected{
 	font-weight: bold;
+	background: #eee;
+    border-radius: 3px;
 }
 
 
@@ -30,7 +45,8 @@ form#conversationsList .not-selected{
 }
 
 form#conversationsList .not-selected.pending{
-	text-decoration: underline;
+	background: yellow;
+	border-radius: 3px;
 }
 
 form .error{
@@ -45,7 +61,7 @@ form .error{
 }
 
 #avatar {
-    width: 90%;
+    width: 90%px;
     background: #eee;
     border-radius: 50%;
 }
