--- a/WebContent/resources/css/styles.css
+++ b/WebContent/resources/css/styles.css
@@ -11,6 +11,17 @@ form {
 	background-color: #eee;
 }
 
+a#logoutLink{
+	width:100%;
+}
+
+form#logoutForm{
+	padding: 0;
+}
+
+form#logoutForm i{
+	margin-right: 5px;
+}
 
 form#conversationsList {
 	background-color: transparent;
@@ -61,7 +72,7 @@ form .error{
 }
 
 #avatar {
-    width: 90%px;
+    width: 90%;
     background: #eee;
     border-radius: 50%;
 }
