Envia mensaje de borrar desde usuario cuando cierra sesion

--- a/WebContent/resources/css/styles.css
+++ b/WebContent/resources/css/styles.css
@@ -37,6 +37,10 @@ form#conversationsList {
 	padding:0;
 }
 
+form#conversationsList .form-group.user{
+	margin-bottom: 5px
+}
+
 form#conversationsList a{
 	display: block;
 	padding: 5px 10px;
