Commit final. Paso de entrar en detalles.

--- a/WebContent/resources/css/styles.css
+++ b/WebContent/resources/css/styles.css
@@ -48,7 +48,7 @@ form#conversationsList a{
 }
 
 form#conversationsList a.close-chat{
-	display: inline-block;
+	display: none;
     float: left;
     top: 3px;
     margin: 5px 0;
